@@ -1,51 +1,12 @@
 AUX 1.1.0_rc3/fix-solaris-compiler.patch 1507 RMD160 79cbb883a181b16f5e2e6c9534a22fb3b98da3a6 SHA1 182b44cd6e014f2c1471485968d9ba9baefd2674 SHA256 396ff2529e2b9d5781cdc3e40bbf8f2ac87aafa5e8f0fe2769484b698712e572
-MD5 102145843920be2972d9f7405bbfc3dc files/1.1.0_rc3/fix-solaris-compiler.patch 1507
-RMD160 79cbb883a181b16f5e2e6c9534a22fb3b98da3a6 files/1.1.0_rc3/fix-solaris-compiler.patch 1507
-SHA256 396ff2529e2b9d5781cdc3e40bbf8f2ac87aafa5e8f0fe2769484b698712e572 files/1.1.0_rc3/fix-solaris-compiler.patch 1507
 AUX 1.1.0_rc3/uncouple-gluegen.patch 1529 RMD160 e7165ed0efdb4637f43b6fb80480fd8afcac2190 SHA1 10e6670df21c0a7263fc3cb5ed67fbe01d0a050e SHA256 9f48ff447f7787703c011d99d0b29b6ae397e03936e72e00ab7989912f361f81
-MD5 711b0a171bcc70b323c9ba0af449bf5a files/1.1.0_rc3/uncouple-gluegen.patch 1529
-RMD160 e7165ed0efdb4637f43b6fb80480fd8afcac2190 files/1.1.0_rc3/uncouple-gluegen.patch 1529
-SHA256 9f48ff447f7787703c011d99d0b29b6ae397e03936e72e00ab7989912f361f81 files/1.1.0_rc3/uncouple-gluegen.patch 1529
 AUX jogl-1.0.0-fix-solaris-compiler.patch 2622 RMD160 e81c27c78724585b29f260f9cbb19fa2735f7a79 SHA1 bbe3bb709c098f95da5b6f84c1640a7db3bf1815 SHA256 770983033eab305fbad638242f24ce39bb770df09307e4f14477cea54e47a8db
-MD5 ead35dcd40d3307b6612ecd32817c622 files/jogl-1.0.0-fix-solaris-compiler.patch 2622
-RMD160 e81c27c78724585b29f260f9cbb19fa2735f7a79 files/jogl-1.0.0-fix-solaris-compiler.patch 2622
-SHA256 770983033eab305fbad638242f24ce39bb770df09307e4f14477cea54e47a8db files/jogl-1.0.0-fix-solaris-compiler.patch 2622
 AUX jogl-1.0.0-libpath.patch 1011 RMD160 cd5b1a13d8d1a722d85eb0369d41d4c470c7c79a SHA1 e574a40d0b6ab2d99bb1ec69685209ddfcc9382f SHA256 1ad687f5cd0100bc5e908756b05704ef93a3ac6835497c19458f6401ef053ee4
-MD5 5c0b77ba1fbda868e9066bb70feb38be files/jogl-1.0.0-libpath.patch 1011
-RMD160 cd5b1a13d8d1a722d85eb0369d41d4c470c7c79a files/jogl-1.0.0-libpath.patch 1011
-SHA256 1ad687f5cd0100bc5e908756b05704ef93a3ac6835497c19458f6401ef053ee4 files/jogl-1.0.0-libpath.patch 1011
 AUX jogl-1.0.0-r1-build.xml.patch 2941 RMD160 e789eb59255b6b4bc0ce3cc45ff5e41651ecb360 SHA1 b2ee46805f87cc99fd06ab4121fb5c8c28755c4e SHA256 4e294076e89222404d1dd6b659310aea27c1ad74962aba8f6717007b8fc5405b
-MD5 a2fb9ddcc4197535d27c6d46d50713d0 files/jogl-1.0.0-r1-build.xml.patch 2941
-RMD160 e789eb59255b6b4bc0ce3cc45ff5e41651ecb360 files/jogl-1.0.0-r1-build.xml.patch 2941
-SHA256 4e294076e89222404d1dd6b659310aea27c1ad74962aba8f6717007b8fc5405b files/jogl-1.0.0-r1-build.xml.patch 2941
 DIST jogl-1.1.0-rc3-src.zip 1680231 RMD160 09647f38b2e68d106a7ebdf69ffea1ad6af45a97 SHA1 e67c58cf47570867147b42a696d9e7808d0d472c SHA256 218422b641d866aca2249a681476004973aa36217ec6353b03d116a5967f9956
 DIST jogl-1_0_0-src.zip 1445577 RMD160 ea09614b45463410c3f4b1255a35a95869fa45dc SHA1 f665077dd60327b7e8945ebc84e1c6eaed192fa4 SHA256 509673d4aa345dad2537f41a030f714a3901e3922ca2e81caca409bb39178ff6
 EBUILD jogl-1.0.0-r1.ebuild 2053 RMD160 eeb1e2be6c736c3f412d62bf94cfe73138d41c61 SHA1 5756a05959bb70f4736c41da75193801296adc0e SHA256 2554fe1cfd329d1fe724d0aa243dae2c30f330edc36c1dfd09d2a2c3df91529b
-MD5 01cadf2c6a0c300e9ab76586444ff92c jogl-1.0.0-r1.ebuild 2053
-RMD160 eeb1e2be6c736c3f412d62bf94cfe73138d41c61 jogl-1.0.0-r1.ebuild 2053
-SHA256 2554fe1cfd329d1fe724d0aa243dae2c30f330edc36c1dfd09d2a2c3df91529b jogl-1.0.0-r1.ebuild 2053
 EBUILD jogl-1.0.0.ebuild 1779 RMD160 050611c736bd4e6f6d433a40d21bacac64f96754 SHA1 a2b7cc7fe8c04a105f1d0397d3be7a9322be3a16 SHA256 7b3ad9afb9c721cc2099160e8e17c7046a55410e1864b80a41b703ada5a1e1e1
-MD5 6bb4c096a3d4472a28f62d4828f0dbfd jogl-1.0.0.ebuild 1779
-RMD160 050611c736bd4e6f6d433a40d21bacac64f96754 jogl-1.0.0.ebuild 1779
-SHA256 7b3ad9afb9c721cc2099160e8e17c7046a55410e1864b80a41b703ada5a1e1e1 jogl-1.0.0.ebuild 1779
-EBUILD jogl-1.1.0_rc3.ebuild 2028 RMD160 784e645dde16d973d0f35bb9277a26e62d4dfd42 SHA1 66a6b41b741848a572b7904309763c00739da812 SHA256 d0426d6b1c0903cdd4a06968f40252b22272fcba8b4e5a5c1c139675f13a7656
-MD5 2ad52eba290afb27c52a8f9b4a551215 jogl-1.1.0_rc3.ebuild 2028
-RMD160 784e645dde16d973d0f35bb9277a26e62d4dfd42 jogl-1.1.0_rc3.ebuild 2028
-SHA256 d0426d6b1c0903cdd4a06968f40252b22272fcba8b4e5a5c1c139675f13a7656 jogl-1.1.0_rc3.ebuild 2028
-MISC ChangeLog 358 RMD160 ba103f7dac06f989eabf84ea6c4de502edf079ad SHA1 76442827eb96384828a631d3d536cf53b7e2548e SHA256 1266978abf150daefc5938c91d49e3809d85574840df746fa010e0af61e6c343
-MD5 7399e2dfed53d5d1809c98066ce51790 ChangeLog 358
-RMD160 ba103f7dac06f989eabf84ea6c4de502edf079ad ChangeLog 358
-SHA256 1266978abf150daefc5938c91d49e3809d85574840df746fa010e0af61e6c343 ChangeLog 358
+EBUILD jogl-1.1.0_rc3.ebuild 2036 RMD160 e7ef43072e92f3fab19d45a58dba8d947508ca18 SHA1 f0347a7852ced521d2aa4b8fd2b621d06bc2033e SHA256 4b5801bc0b2800191da3a25ea4145c9573e020ca40ef6872a636a875cee942de
+MISC ChangeLog 477 RMD160 ef8725f6e153b3c5375447635fd146ce8da0dfe3 SHA1 749598d4c1da2d4cea29336b42da78caa4e3dc44 SHA256 1e8f52986b19ec535c032f6002119908ad2954bca9777e464d50ff661574fddc
 MISC metadata.xml 362 RMD160 76ec91a28c7e7fae828a05ff3b378aec09af6fc2 SHA1 76a2ac9b977db25a8133a66a9145c37a5d0bea24 SHA256 e23a8dff1a76bb75fe51de2da0515357a3e9423249f04842400a38e0a95c776b
-MD5 998a8146bda70ee961d490f456536ddd metadata.xml 362
-RMD160 76ec91a28c7e7fae828a05ff3b378aec09af6fc2 metadata.xml 362
-SHA256 e23a8dff1a76bb75fe51de2da0515357a3e9423249f04842400a38e0a95c776b metadata.xml 362
-MD5 e58f2efe45ae9eb1e51d2753a447ad95 files/digest-jogl-1.0.0 238
-RMD160 6e5a4031e96760da2be26e80fda66e41c1df7850 files/digest-jogl-1.0.0 238
-SHA256 d455648d6212d3da7ae3fedcb1431e7014cc731b83b09008015b12b315322303 files/digest-jogl-1.0.0 238
-MD5 e58f2efe45ae9eb1e51d2753a447ad95 files/digest-jogl-1.0.0-r1 238
-RMD160 6e5a4031e96760da2be26e80fda66e41c1df7850 files/digest-jogl-1.0.0-r1 238
-SHA256 d455648d6212d3da7ae3fedcb1431e7014cc731b83b09008015b12b315322303 files/digest-jogl-1.0.0-r1 238
-MD5 4fd48eecc94449fdd39764f5ff6200c0 files/digest-jogl-1.1.0_rc3 250
-RMD160 162b4678b8de2f4ffea9bd2078ccc30ef9a896f9 files/digest-jogl-1.1.0_rc3 250
-SHA256 ed258921778f341c76bea4ca3f511e5aa52efcf0855249b04b31c7d96fb115bb files/digest-jogl-1.1.0_rc3 250
